manifests/gobbler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gobblerweb
  labels:
    app: gobbler
spec:
  selector:
    app: gobbler
    tier: web
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
