manifests/gobbler-ingress-static-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gobblerweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gobblerweb-ip
  labels:
    app: gobbler
spec:
  backend:
    serviceName: gobbler-service
    servicePort: 443
    servicePort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: gobbler-service
#   labels:
#     app: gobbler
# spec:
#   type: NodePort
#   selector:
#     app: gobbler
#     tier: web
#   ports:
#   - name: http
#     port: 80
#     targetPort: 8080
#     protocol: TCP
#   - name: https
#     port: 443
#     targetPort: 8080
#     protocol: TCP
